--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </select>
         </p>
         <br>
-        <button onclick="sendData()" ><a href="/second/index2.html"> Отправить </a></button>
+        <button onclick="sendData()" ><a href="https://tedige.github.io/third/"> Отправить </a></button>
         <script src="test.js"></script>
     </div>
     <div class="content">
